# spica-deck-cargo-planner

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOY.md  UPDATE.md  design-system.md  index.html  manual-ru.html  manual.html  package-lock.json  package.json  vite.config.js
.claude/rules/: exports.md  tauri-build.md  ui-deckplanner.md
.github/workflows/: build-windows.yml  release.yml
assets/: DESIGN (1).md
docs/: CHANGELOG.md.rtf  CLAUDE_CODE_START_PROMPT.md.rtf  CLAUDE_MIGRATION_BRIEF.md.rtf  MASTER_HANDOVER.md.rtf  PROJECT_STATUS.md.rtf  ROADMAP.md.rtf  SPICA_TIDE_HANDOVER_BRIEF_v38.19.md  SPICA_TIDE_HANDOVER_v38.19_FULL.md
source/v1_current/: source:v1_current.html
src/: app.js  badgeRegistry.js  main.js  releaseNotes.js  sync.js
src-tauri/: Cargo.toml  EULA.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.heic
src-tauri/src/: main.rs
src/styles/: app.css  fonts.css
tasks/: todo.md
