[package]
name = "spica-tide"
version = "1.0.0"
description = "SPICA TIDE — Deck Cargo Planning Tool for PSV FAR SPICA"
authors = ["SPICA TIDE Project"]
license = "Proprietary"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
